--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,28 @@
     );
     padding: 16px 22px;
   }
+
+  .btn {
+    height: 25px;
+    min-width: 25px;
+  }
+
+  .check-btn {
+    margin-right: 10px;
+    padding: 5px;
+  }
+
+  .checked {
+    text-align: center;
+    padding: 0;
+    background-color: rgb(76, 117, 14);
+    border-radius: 40PX;
+  }
+
+  .finished {
+    opacity: 0.5;
+    text-decoration: line-through;
+  }
   
   .todo-container {
     display: flex;
@@ -98,12 +120,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 4px auto;
+    margin: 15px auto;
     color: #fff;
     background: linear-gradient(
       90deg,
-      rgb(0, 230, 153) 0%,
-      rgb(103, 232, 255) 100%
+      rgb(3, 170, 114) 0%,
+      rgb(63, 124, 135) 100%
     );
   
     padding: 16px;
@@ -114,8 +136,8 @@
   .todo-row:nth-child(4n + 2) {
     background: linear-gradient(
       90deg,
-      rgb(12, 182, 255) 0%,
-      rgb(51, 100, 246) 100%
+      rgb(11, 139, 194) 0%,
+      rgb(36, 63, 146) 100%
     );
   }
   
